Issue #2382377: Fatal error after disabling workflow_access: Call to undefined function workflow_access() in /entity/entity.module
Issue #2369435: Fixed Notice: Undefined index: group in workflow_actions_trigger_info() (Line 162 of workflow_actions/workflow_actions.module)
Issue #2260971: Updated documentation in workflow.api.php
Issue #843568: Fixed undefined var when saving revisions.
Issue #2304875: Fixed Status Report Tokens Warning when entity_token not enabled.
Issue #2385439: Added Field setting to remove Workflow widget from entity edit forms.
Issue #2228325: Moved documentation from Workflow_extensions module's README.txt to Workflow's README.txt
Issue #2374587 by Karsa: Workflow node doesn't set the state of a newly created node
Issue #2373103: Fixed Notice 'Undefined index' in list_field_formatter_view() when previewing a node.
Issue #2308677: Fixed regression: 'Workflow current: Current state' is missing when creating a contextual filter
Issue #2400211: Added Views support for non-node entity types

Since 7.x-2.5
Issue #2340011: Fixed Error "Workflow 0 cannot be loaded" when using Workflow Node and Workflow Rules
Issue #2401481: Fixed error when creating a Transition, parameter values() is discarded
Issue #2401493: Added $transition->getTimestamp()
Issue #2401511: Renamed hook-functions in workflownode module
Issue #2406175: Implemented a WorkflowTransitionForm form object
Issue #1559680: Make Transitions fieldable entities -1-
Issue #2406175: Uniformed creation of form_id
Issue #2406175: Moved WorkfowTransitionEdit to th WorkflowTransitionForm form object
Issue #2441821: Fixed wrong link
Issue #2441821: Fixed error
Issue #2441821: Better determination of field_name
Issue #2421157: Added Block for viewing/changing a Workflow State
Issue #2417193 by kaare: Added stub for undefined method WorkflowItem::delete()
Issue #2430243: Fixed fragile check for entity edit mode in WorkflowTransitionForm::submitForm()